# Unified-MCU-BIST-Framework-PythonMonitor

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  concurrent_monitor.py  connection_analyzer.py  data_storage.py  event_decoder.py  main.py  phase_masking.py  pin_analyzer.py  pyproject.toml
.github/workflows/: publish_tool.yaml  quality_assurance.yaml  release.yaml  static_analysis.yaml  test_py_tool.yaml
examples/: monitor.py  process_recording.py
src/: __init__.py  cli.py  concurrent_monitor.py  config_framework.py  config_targets.py  connection_analyzer.py  data_storage.py  event_decoder.py  helper_serial.py  logger.py  main.py  phase_masking.py  pin_analyzer.py
src/testsoftware_monitor/: __init__.py
tests/: conftest.py  raw_data_2025_11_22_19_54_21.xml  raw_data_2025_11_26_11_31_04.xml  test_cli.py  test_process_recordings.py
