[project]
name = "testsoftware-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "Päpke, Tim Carlo",email = "tim.paepke@stud.tu-darmstadt.de"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "cbor2 (>=5.7.0,<6.0.0)",
    "xxhash (>=3.5.0,<4.0.0)",
]

[tool.poetry]
packages = [{include = "testsoftware_monitor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
