[project]
name = "testsoftware-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "Päpke, Tim Carlo",email = "tim.paepke@stud.tu-darmstadt.de"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "cbor2 (>=5.7.0,<6.0.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "crc32c (>=2.7.1,<3.0.0)",
    "crcmod (>=1.7,<2.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pre-commit-uv", # check with `pre-commit --version`
]

[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"
